--- a/gst-plugin-audiofx/Cargo.toml
+++ b/gst-plugin-audiofx/Cargo.toml
@@ -7,10 +7,10 @@ license = "MIT/Apache-2.0"
 description = "Rust AudioFx Plugin"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.8" }
+gstreamer = { version = "0.14", features = ["subclassing"] }
+gstreamer-base = { version = "0.14", features = ["subclassing"] }
+gstreamer-audio = { version = "0.14" }
 byte-slice-cast = "0.3"
 num-traits = "0.2"
 
