--- a/gst-plugin-cdg/Cargo.toml
+++ b/gst-plugin-cdg/Cargo.toml
@@ -8,11 +8,11 @@ description = "CDG Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
-gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.8" }
+gstreamer = { version = "0.14", features = ["subclassing", "v1_12"] }
+gstreamer-base = { version = "0.14", features = ["subclassing", "v1_12"] }
+gstreamer-video = { version = "0.14", features = ["subclassing", "v1_12"] }
+gstreamer-app = { version = "0.14" }
 cdg = "0.1.0"
 cdg_renderer = "0.2"
 image = "0.21"
