--- a/gst-plugin-flv/Cargo.toml
+++ b/gst-plugin-flv/Cargo.toml
@@ -9,9 +9,9 @@ description = "Rust FLV Plugin"
 
 [dependencies]
 url = "1.1"
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.8" }
+gstreamer = { version = "0.14", features = ["subclassing"] }
+gstreamer-base = { version = "0.14" }
 num-rational = { version = "0.2", default-features = false, features = [] }
 nom = "4.0"
 flavors = {git = "https://github.com/rust-av/flavors.git"}
