--- a/gst-plugin-http/Cargo.toml
+++ b/gst-plugin-http/Cargo.toml
@@ -8,11 +8,11 @@ description = "Rust HTTP Plugin"
 
 [dependencies]
 url = "1.1"
-glib = { git = "https://github.com/gtk-rs/glib" }
+glib = { version = "0.8" }
 reqwest = "0.9"
 hyperx = "0.15"
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
+gstreamer = { version = "0.14", features = ["subclassing"] }
+gstreamer-base = { version = "0.14", features = ["subclassing"] }
 
 [lib]
 name = "gstrshttp"
