--- a/gst-plugin-rav1e/Cargo.toml
+++ b/gst-plugin-rav1e/Cargo.toml
@@ -8,10 +8,10 @@ description = "rav1e AV1 Encoder Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
-gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { version = "0.8" }
+gstreamer = { version = "0.14", features = ["subclassing"] }
+gstreamer-video = { version = "0.14", features = ["subclassing"] }
+gstreamer-check = { version = "0.14" }
 rav1e = { git = "https://github.com/xiph/rav1e.git", default-features=false }
 
 [lib]
