--- a/gst-plugin-s3/Cargo.toml
+++ b/gst-plugin-s3/Cargo.toml
@@ -10,9 +10,9 @@ edition = "2018"
 [dependencies]
 bytes = "0.4"
 futures = "0.1"
-glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
+glib = { version = "0.8" }
+gstreamer = { version = "0.14", features = ["subclassing", "v1_12"] }
+gstreamer-base = { version = "0.14", features = ["subclassing", "v1_12"] }
 rusoto_core = "0.39.0"
 rusoto_s3 = "0.39.0"
 url = "1.7"
