--- a/gst-plugin-sodium/Cargo.toml
+++ b/gst-plugin-sodium/Cargo.toml
@@ -7,9 +7,9 @@ description = "libsodium-based file encryption and decryption"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_14"], package="gstreamer" }
-gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_14"], package = "gstreamer-base" }
+glib = { version = "0.8" }
+gst = { version = "0.14", features = ["subclassing", "v1_14"], package="gstreamer" }
+gst-base = { version = "0.14", features = ["subclassing", "v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
 lazy_static = "1.3.0"
 hex = "0.3.2"
@@ -25,11 +25,11 @@ pretty_assertions = "0.6"
 rand = "0.6"
 
 [dev-dependencies.gst-check]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.14"
 package="gstreamer-check"
 
 [dev-dependencies.gst-app]
-git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+version = "0.14"
 package="gstreamer-app"
 
 [lib]
