--- a/gst-plugin-reqwest/Cargo.toml
+++ b/gst-plugin-reqwest/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gst-plugin-http"
+name = "gst-plugin-reqwest"
 version = "0.5.0"
 authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
