--- a/gst-plugin-closedcaption/Cargo.toml
+++ b/gst-plugin-closedcaption/Cargo.toml
@@ -32,7 +32,7 @@ package="gstreamer-video"
 
 [dev-dependencies]
 pretty_assertions = "0.6"
-rand = "0.6"
+rand = { version = "0.7", features = ["small_rng"] }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
