togglerecord: Don't hold any mutexes while adding/removing pads
Otherwise something might easily deadlock if the application is doing
something from the pad-added/pad-removed signals.

--- a/gst-plugin-togglerecord/Cargo.toml
+++ b/gst-plugin-togglerecord/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sebastian Dröge <sebastian@centricular.com>"]
 license = "LGPL-2.1+"
 description = "Toggle Record Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
+edition = "2018"
 
 [dependencies]
 glib = { version = "0.8", features = ["subclassing"] }
