--- a/gst-plugin-version-helper/Cargo.toml
+++ b/gst-plugin-version-helper/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Sajeer Ahamed <ahamedsajeer.15.15@cse.mrt.ac.lk>"]
 edition = "2018"
 
 [dependencies]
-git2 = "0.9.0"
+git2 = "0.9"
 chrono = "0.4.6"
+toml = "0.5"
