--- a/gst-plugin-version-helper/Cargo.toml
+++ b/gst-plugin-version-helper/Cargo.toml
@@ -14,4 +14,4 @@ edition = "2018"
 [dependencies]
 git2 = "0.9"
 chrono = "0.4.6"
-toml = "0.5"
+toml = { version = "0.5", default-features = false }
