--- a/gst-plugin-s3/Cargo.toml
+++ b/gst-plugin-s3/Cargo.toml
@@ -15,7 +15,8 @@ gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", fea
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
 rusoto_core = "0.40"
 rusoto_s3 = "0.40"
-url = "1.7"
+url = "2"
+percent-encoding = "2"
 tokio = "0.1"
 
 [lib]
