--- a/gst-plugin-reqwest/Cargo.toml
+++ b/gst-plugin-reqwest/Cargo.toml
@@ -22,7 +22,7 @@ bytes = "0.4"
 hyper = "0.12"
 
 [lib]
-name = "gstreqwest"
+name = "gstrshttp"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
