reqwest: Rename again reflecting the crate name
rshttp is too generic, so rename the plugin in a similar fashion as most other
GStreamer Rust plugins in this repository.

--- a/gst-plugin-reqwest/Cargo.toml
+++ b/gst-plugin-reqwest/Cargo.toml
@@ -22,7 +22,7 @@ bytes = "0.4"
 hyper = "0.12"
 
 [lib]
-name = "gstrshttp"
+name = "gstreqwest"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
