--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "gst-plugin-cdg",
     "gst-plugin-rav1e",
     "gst-plugin-s3",
+    "gst-plugin-fallbackswitch",
 ]
 
 [profile.release]
