--- a/gst-plugin-closedcaption/Cargo.toml
+++ b/gst-plugin-closedcaption/Cargo.toml
@@ -8,7 +8,7 @@ description = "Rust Closed Caption Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
+glib = { git = "https://github.com/gtk-rs/glib" }
 combine = "3.6"
 either = "1"
 uuid = { version = "0.7", features = ["v4"] }
@@ -17,12 +17,12 @@ lazy_static = "1.2"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-features = ["subclassing", "v1_12"]
+features = ["v1_12"]
 package="gstreamer"
 
 [dependencies.gst-base]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
-features = ["subclassing", "v1_12"]
+features = ["v1_12"]
 package="gstreamer-base"
 
 [dependencies.gst-video]
