--- a/gst-plugin-s3/Cargo.toml
+++ b/gst-plugin-s3/Cargo.toml
@@ -11,8 +11,8 @@ edition = "2018"
 bytes = "0.4"
 futures = "0.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_12"] }
+gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
+gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 rusoto_core = "0.40"
 rusoto_s3 = "0.40"
 url = "2"
