--- a/gst-plugin-sodium/Cargo.toml
+++ b/gst-plugin-sodium/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/glib" }
-gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_14"], package="gstreamer" }
-gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing", "v1_14"], package = "gstreamer-base" }
+gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package="gstreamer" }
+gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
 lazy_static = "1.3.0"
 hex = "0.3.2"
