Add initial version of lewton based Vorbis decoder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "gst-plugin-rav1e",
     "gst-plugin-s3",
     "gst-plugin-fallbackswitch",
+    "gst-plugin-lewton",
 ]
 
 [profile.release]
