--- a/gst-plugin-fallbackswitch/Cargo.toml
+++ b/gst-plugin-fallbackswitch/Cargo.toml
@@ -17,6 +17,8 @@ gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
 gstreamer-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
 gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
 gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"] }
+gtk = { git = "https://github.com/gtk-rs/gtk", optional = true }
+gio = { git = "https://github.com/gtk-rs/gio", optional = true }
 
 [dev-dependencies]
 gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs",  features = ["v1_14"]}
@@ -27,6 +29,11 @@ lazy_static = "1.2"
 name = "gstfallbackswitch"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
+
+[[example]]
+name = "gtk-fallbackswitch"
+path = "examples/gtk_fallbackswitch.rs"
+required-features = ["gtk", "gio"]
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
