--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,13 +24,14 @@ stages:
       libgl1-mesa-dri
       libgl1-mesa-glx
       libwayland-egl1-mesa
+      xz-utils
   before_script:
     - apt-get update -yqq
     - apt-get install -yqq --no-install-recommends $DEPENDENCIES
 
     - mkdir -p precompiled-gst && cd precompiled-gst
 
-    - curl -L https://people.freedesktop.org/~slomo/gstreamer-1.16.0.tar.gz | tar xz
+    - curl -L https://people.freedesktop.org/~slomo/gstreamer-1.16.1.tar.xz | tar xJ
     - sed -i "s;prefix=/root/gstreamer;prefix=$PWD/gstreamer;g" $PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig/*.pc
     - export PKG_CONFIG_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/pkgconfig
     - export GST_PLUGIN_SYSTEM_PATH=$PWD/gstreamer/lib/x86_64-linux-gnu/gstreamer-1.0
@@ -57,24 +58,24 @@ stages:
 test 1.36:
   # 1.36 img
   # https://hub.docker.com/_/rust/
-  image: "rust:1.36-slim"
+  image: "rust:1.36-slim-buster"
   extends: '.cargo test'
 
 test stable:
   # Stable img
   # https://hub.docker.com/_/rust/
-  image: "rust:slim"
+  image: "rust:slim-buster"
   extends: '.cargo test'
 
 test nightly:
   # Nightly
   # https://hub.docker.com/r/rustlang/rust/
-  image: "rustlang/rust:nightly-slim"
+  image: "rustlang/rust:nightly-buster-slim"
   allow_failure: true
   extends: '.cargo test'
 
 rustfmt:
-  image: "rust:slim"
+  image: "rust:slim-buster"
   stage: "lint"
   script:
     - rustup component add rustfmt
@@ -83,7 +84,7 @@ rustfmt:
 
 clippy:
   extends: '.tarball_setup'
-  image: "rust:slim"
+  image: "rust:slim-buster"
   stage: 'extras'
   script:
     - rustup component add clippy-preview
