rusoto: Rename s3 as rusoto
Will disambiguate from any other S3 plugins, and matches how we name
other plugins (soup, lewton, rav1e, ...).

Fixes: https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/issues/76

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "gst-plugin-sodium",
     "gst-plugin-cdg",
     "gst-plugin-rav1e",
-    "gst-plugin-s3",
+    "gst-plugin-rusoto",
     "gst-plugin-fallbackswitch",
     "gst-plugin-lewton",
 ]
