--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,5 +97,5 @@ audit:
   only:
     - schedules
   script:
-    - cargo install cargo-audit
+    - cargo install --force cargo-audit
     - cargo audit --deny-warnings
