--- a/gst-plugin-sodium/Cargo.toml
+++ b/gst-plugin-sodium/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Jordan Petridis <jordan@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugin-rs"
 description = "libsodium-based file encryption and decryption"
+license = "MIT"
 edition = "2018"
 
 [dependencies]
