--- a/gst-plugin-rav1e/Cargo.toml
+++ b/gst-plugin-rav1e/Cargo.toml
@@ -14,6 +14,7 @@ gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs
 gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 rav1e = { git = "https://github.com/xiph/rav1e.git", default-features=false }
 atomic_refcell = "0.1"
+lazy_static = "1.0"
 
 [lib]
 name = "gstrav1e"
