--- a/gst-plugin-rav1e/Cargo.toml
+++ b/gst-plugin-rav1e/Cargo.toml
@@ -12,7 +12,7 @@ glib = { git = "https://github.com/gtk-rs/glib" }
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-check = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-rav1e = { git = "https://github.com/xiph/rav1e.git", default-features=false }
+rav1e = { version = "0.1", default-features=false }
 atomic_refcell = "0.1"
 lazy_static = "1.0"
 
