--- a/gst-plugin-threadshare/Cargo.toml
+++ b/gst-plugin-threadshare/Cargo.toml
@@ -21,10 +21,7 @@ gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gst
 gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gstreamer-sys = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys" }
 pin-project = "0.4"
-tokio = "=0.2.0-alpha.6"
-tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread"] }
-tokio-net = { version = "=0.2.0-alpha.6", features = ["tcp", "udp"] }
-tokio-timer = "=0.3.0-alpha.6"
+tokio = { git = "https://github.com/fengalin/tokio", branch = "fengalin/0.2.5-throttling", features = ["io-util", "macros", "rt-core", "sync", "time", "tcp", "udp"] }
 futures = "0.3"
 lazy_static = "1.0"
 either = "1.0"
