--- a/gst-plugin-reqwest/Cargo.toml
+++ b/gst-plugin-reqwest/Cargo.toml
@@ -8,19 +8,19 @@ description = "Rust HTTP Plugin"
 edition = "2018"
 
 [dependencies]
-url = "1.7"
+url = "2.1"
 glib = { git = "https://github.com/gtk-rs/glib" }
-reqwest = "0.9"
-futures = "0.1.23"
-hyperx = "0.15"
+reqwest = { version = "0.10", features = ["cookies", "gzip"] }
+futures = "0.3"
+headers = "0.3"
+mime = "0.3"
 gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
 gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-tokio = "0.1"
-bytes = "0.4"
+tokio = { version = "0.2", features = ["time", "rt-threaded"] }
 lazy_static = "1.0"
 
 [dev-dependencies]
-hyper = "0.12"
+hyper = "0.13.0-alpha"
 
 [lib]
 name = "gstreqwest"
