--- a/gst-plugin-reqwest/Cargo.toml
+++ b/gst-plugin-reqwest/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "0.2", features = ["time", "rt-threaded"] }
 lazy_static = "1.0"
 
 [dev-dependencies]
-hyper = "0.13.0-alpha"
+hyper = "0.13"
 
 [lib]
 name = "gstreqwest"
