meson: add 'command' argument to cargo wrapper
Will be used to add test support.

--- a/meson.build
+++ b/meson.build
@@ -89,6 +89,7 @@ rs_plugins = custom_target('gst-plugins-rs',
   build_always_stale: true,
   depends: depends,
   command: [cargo_wrapper,
+    'build',
     meson.current_build_dir(),
     meson.current_source_dir(),
     meson.build_root(),
