--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,4 @@
 option('dav1d', type : 'feature', value : 'auto', description : 'Build dav1d plugin')
+option('sodium', type : 'combo',
+    choices : ['system', 'built-in', 'disabled'], value : 'built-in',
+    description : 'Weither to use libsodium from the system or the built-in version from the sodiumoxide crate')
