--- a/gst-plugin-tutorial/Cargo.toml
+++ b/gst-plugin-tutorial/Cargo.toml
@@ -15,7 +15,7 @@ gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs
 gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 byte-slice-cast = "0.3"
 num-traits = "0.2"
-lazy_static = "1.0"
+once_cell = "1.0"
 
 [lib]
 name = "gstrstutorial"
