--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "gst-plugin-fallbackswitch",
     "gst-plugin-lewton",
     "gst-plugin-claxon",
+    "gst-plugin-gif",
 ]
 
 [profile.release]
