--- a/gst-plugin-closedcaption/Cargo.toml
+++ b/gst-plugin-closedcaption/Cargo.toml
@@ -14,6 +14,7 @@ either = "1"
 uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
 lazy_static = "1.2"
+atomic_refcell = "0.1"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
@@ -45,3 +46,4 @@ path = "src/lib.rs"
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../gst-plugin-version-helper" }
+cc = "1.0"
